# Aero

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  protostar.toml  rust-toolchain.toml
aero-sdk/: .gitignore  package-lock.json  package.json  webpack.config.js
aero-sdk-v0.6/: README.md  webpack.config.demo.js
aero-sdk-v0.6/miden-wasm/: Cargo.toml
aero-sdk-v0.6/proto/: miden_prover.proto  miden_vm.proto
aero-sdk/miden-wasm/: Cargo.toml
aero-sdk/miden-wasm/src/: constraints_worker.rs  hashing_worker.rs  lib.rs  pool.rs  proving_worker.rs  utils.rs
aero-sdk/miden-wasm/src/convert/: convert_proof.rs  mod.rs
aero-sdk/miden-wasm/tests/: prove.rs
aero-sdk/proto/: ood_frame.proto  queries.proto
aero-sdk/rpo-gpu/: Cargo.toml
aero-sdk/rpo-gpu/src/: field_ops.wgsl  lib.rs
aero-sdk/rpo-gpu/tests/: field_op_tests.rs
aero-sdk/src/: constraints_worker.ts  marco_ciaramella__sha256-gpu.d.ts  sdk.ts
aero-sdk/src/demo/: index.ts
miden-proof-generator/: Cargo.toml
miden-proof-generator/src/: lib.rs  main.rs
miden-to-cairo-parser/: Cargo.toml
miden-to-cairo-parser/src/: lib.rs  main.rs  memory.rs
sdk-api/: .gitignore  Cargo.toml  README.md  build.rs  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.demo.js
sdk-api/miden-wasm/: Cargo.toml  build.rs
sdk-api/miden-wasm/src/: hashing_worker.rs  lib.rs  pool.rs  proving_worker.rs  utils.rs
sdk-api/miden-wasm/src/convert/: convert_inputs.rs  convert_proof.rs  sdk.rs
sdk-api/miden-wasm/tests/: prove.rs  shim.rs
sdk-api/proto/: commitments.proto  common.proto  context.proto  fri_proof.proto  miden_prover.proto  miden_vm.proto  ood_frame.proto  queries.proto  service.proto  stark_proof.proto
sdk-api/src/: hashing_worker.ts  lib.rs  proving_worker.ts  sdk.test.ts  sdk.ts
sdk-api/src/convert/: convert_inputs.rs  convert_proof.rs
sdk-api/src/demo/: index.ts
src/crypto/: hash_utils.cairo
src/stark_verifier/: channel.cairo  composer.cairo  evaluator.cairo  stark_verifier.cairo  utils.py
src/stark_verifier/air/: air_instance.cairo  pub_inputs.cairo
src/stark_verifier/crypto/: random.cairo
src/stark_verifier/fri/: fri_verifier.cairo  polynomials.cairo
src/utils/: hex_utils.py  math_goldilocks.cairo
tests/integration/: test_verifier.cairo  utils.py
tests/unit/: test_math_g.cairo
