[package]
name = "miden_proof_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.10.0"
log = "0.4.17"
miden = { git = "https://github.com/0xPolygonMiden/miden-vm.git", version = "0.3.0" }
miden-core = { git = "https://github.com/0xPolygonMiden/miden-vm.git", version = "0.3.0" }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm.git", version = "0.2.0" }
serde = { version = "1.0.152", features = ["derive"] }
