[package]
name = "miden_proof_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.10.0"
log = "0.4.17"
miden = { version = "0.3.0", path = "../miden/miden" }
miden-core = { version = "0.3.0", path = "../miden/core" }
miden-stdlib = { version = "0.2.0", path = "../miden/stdlib" }
miden-air = {version = "0.3.0", path = "../miden/air"}
serde = { version = "1.0.152", features = ["derive"] }
