[package]
name = "miden_to_cairo_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.86"
clap = { version = "4.0.18", features = ["derive"] }
winterfell = { package = "winter-verifier", path = "../winterfell/verifier", version = "0.4", default-features = false }
winter_math = { package = "winter-math", path = "../winterfell/math", version = "0.4", default-features = false }
winter_utils = { package = "winter-utils", path = "../winterfell/utils/core", version = "0.4", default-features = false }
winter_crypto = { package = "winter-crypto", path = "../winterfell/crypto", version = "0.4", default-features = false }
winter_air = { package = "winter-air", path = "../winterfell/air", version = "0.4", default-features = false }
winter_fri = { package = "winter-fri", path = "../winterfell/fri", version = "0.4", default-features = false }
miden-air = { path = "../miden/air", version = "0.3.0" }
miden-core = { path = "../miden/core", version = "0.3.0" }
winter-crypto = { version = "0.4.0", path = "../winterfell/crypto" }
miden_proof_generator = { path = "../miden-proof-generator", version = "0.1.0" }
