[package]
name = "sdk-api"
version = "0.1.0"
edition = "2018"

[dependencies]
prost = "0.11.8"
wasm-bindgen = "0.2.84"
miden = { version = "0.3.0", path = "../miden/miden" }
miden-core = { version = "0.3.0", path = "../miden/core" }
miden-stdlib = { version = "0.2.0", path = "../miden/stdlib" }
miden-air = {version = "0.3.0", path = "../miden/air"}
miden-verifier = {version = "0.3.0", path = "../miden/verifier"}

[build-dependencies]
prost-build = {version = "0.11.8"}