[package]
name = "miden-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.8"
wasm-bindgen = "0.2.84"
wasm-bindgen-console-logger = "0.1.1"
wasm-bindgen-futures = "0.4"
futures = "0.3"
miden = { version = "0.3.0", path = "../../miden/miden", default-features = false }
miden-core = { version = "0.3.0", path = "../../miden/core", default-features = false }
miden-stdlib = { version = "0.2.0", path = "../../miden/stdlib", default-features = false }
miden-air = {version = "0.3.0", path = "../../miden/air", default-features = false}
miden-verifier = {version = "0.3.0", path = "../../miden/verifier", default-features = false}
miden-processor = {version = "0.3.0", path = "../../miden/processor", default-features = false}
miden-prover = {version = "0.3.0", path = "../../miden/prover", default-features = false}
winter_fri = { package = "winter-fri", path = "../../winterfell/fri", version = "0.4", default-features = false }
winter_air = { package = "winter-air", path = "../../winterfell/air", version = "0.4", default-features = false }
winter_crypto = { package = "winter-crypto", path = "../../winterfell/crypto", version = "0.4", features = ["wasm"] }
winter_verifier = { package = "winter-verifier", path = "../../winterfell/verifier", version = "0.4", default-features = false }
winter_prover = { package = "winter-prover", path = "../../winterfell/prover", version = "0.4", features = ["wasm"], default-features = false }
winter_utils = { package = "winter-utils", path = "../../winterfell/utils/core", version = "0.4", default-features = false }
log = "0.4.17"
web-sys = { version = "0.3.61", features = ["console", "DedicatedWorkerGlobalScope", "ErrorEvent", "Window", "Navigator", "WorkerNavigator", "Document", "HtmlElement"] }
js-sys = "0.3.61"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.1"
console_error_panic_hook = "0.1.7"
serde_bytes = "0.11.9"

[build-dependencies]
prost-build = {version = "0.11.8"}

[dev-dependencies]
hex = "0.4.3"
wasm-bindgen-test = "0.3.34"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = "s"
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[lib]
crate-type = ["cdylib", "rlib"]
