[package]
name = "rpo-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-console-logger = "0.1.1"
wasm-bindgen-futures = "0.4"
futures = "0.3"
log = "0.4.17"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = "s"
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[lib]
crate-type = ["cdylib", "rlib"]
